--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,9 @@ endfunction()
 
 #ADD_PRG(TARGET TP_SDL SOURCES base_tp1.cpp)
 
-ADD_PRG(TARGET tetris SOURCES game.cpp game.hpp GraphicsObject.cpp GraphicsObject.h window.cpp 			window.h window.inl sprite.cpp sprite.h surface.cpp surface.h GameCore.cpp GameCore.h 			main.cpp)
+ADD_PRG(TARGET tetris SOURCES game.cpp game.hpp GraphicsObject.cpp GraphicsObject.h window.cpp 			
+		window.h window.inl sprite.cpp sprite.h surface.cpp surface.h sceneManager.hpp 		
+		sceneManager.cpp GameCore.cpp GameCore.h main.cpp)
 
 
 
